--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -27,7 +28,17 @@
             </div>
             <audio class="sound-pokemon" src="" controls preload="auto"></audio>
         </div>
-        <div class="box-footer"></div>
+        <div class="box-footer">
+            <button class="btn btn-power">
+                <i class="fa-solid fa-power-off"></i>
+            </button>
+            <button class="btn btn-controls">
+                <i class="fa-solid fa-backward"></i>
+            </button>
+            <button class="btn btn-controls">
+                <i class="fa-solid fa-forward"></i>
+            </button>
+        </div>
         <div class="box-form">
             <form name="form-consult" id="form-consult">
                 <div class="input-text">
@@ -35,7 +46,9 @@
                     <input type="text" name="input_name">
                 </div>
                 <div class="input-button">
-                    <button type="submit" class="button-success" name="btn-consult"></button>
+                    <button type="submit" class="btn btn-search" name="btn-consult">
+                        <i  class="fa-solid fa-circle-dot"></i>
+                    </button>
                 </div>
             </form>
         </div>
