configuracion de pantalla

--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
     <div class="box-pokedex">
         <div class="box-header"></div>
         <div class="box-body">
-            <p class="name-pokemon">Name Pokemon</p>
-            <div>
-                <img class="img-pokemon" src="" alt="Aqui va la imagen del pokemon">
-                <ul>
-                    <li><span>Experiencia Base</span> <span class="base_experience" style="color: red;">19</span></li>
-                    <li><span>Peso</span> <span class="weight" style="color: red;">19</span></li>
-                    <li><span>Habilidades</span>
-                        <span class="abilities-1" style="color: red;">19</span> |
-                        <span class="abilities-2" style="color: red;">19</span>
-                    </li>
-                </ul>
+            <div class="view-1">
+                <p class="name-pokemon">Name Pokemon</p>
+                <div>
+                    <img class="img-pokemon" src="" alt="Aqui va la imagen del pokemon">
+                    <ul>
+                        <li><span>Experiencia Base</span> <span class="base_experience" style="color: red;">19</span>
+                        </li>
+                        <li><span>Peso</span> <span class="weight" style="color: red;">19</span></li>
+                        <li><span>Habilidades</span>
+                            <span>
+                                <span class="abilities-1" style="color: red;">19</span> |
+                                <span class="abilities-2" style="color: red;">19</span>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <audio class="sound-pokemon" src="" controls preload="auto" style="width: 100%;"></audio>
             </div>
-            <audio class="sound-pokemon" src="" controls preload="auto"></audio>
         </div>
         <div class="box-footer">
             <button class="btn btn-power">
@@ -47,7 +52,7 @@
                 </div>
                 <div class="input-button">
                     <button type="submit" class="btn btn-search" name="btn-consult">
-                        <i  class="fa-solid fa-circle-dot"></i>
+                        <i class="fa-solid fa-circle-dot"></i>
                     </button>
                 </div>
             </form>
