--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="box-pokedex">
         <div class="box-header"></div>
         <div class="box-body">
-            <div class="view-1">
+            <div class="view-1 ">
                 <p class="name-pokemon">Name Pokemon</p>
                 <div>
                     <img class="img-pokemon" src="" alt="Aqui va la imagen del pokemon">
@@ -31,6 +31,12 @@
                     </ul>
                 </div>
                 <audio class="sound-pokemon" src="" controls preload="auto" style="width: 100%;"></audio>
+            </div>
+            <div class="view-2 hidden">
+                
+            </div>
+            <div class="view-3 hidden">
+                <p>Encendiendo</p>
             </div>
         </div>
         <div class="box-footer">
