--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="box-pokedex">
         <div class="box-header"></div>
         <div class="box-body">
-            <div class="view-1 ">
+            <div class="height-23 view-1 ">
                 <p class="name-pokemon">Name Pokemon</p>
                 <div>
                     <img class="img-pokemon" src="" alt="Aqui va la imagen del pokemon">
@@ -32,10 +32,10 @@
                 </div>
                 <audio class="sound-pokemon" src="" controls preload="auto" style="width: 100%;"></audio>
             </div>
-            <div class="view-2 hidden">
-                
+            <div class="height-23 view-2 hidden">
+
             </div>
-            <div class="view-3 hidden">
+            <div class="height-23 view-3 hidden">
                 <p>Encendiendo</p>
             </div>
         </div>
@@ -54,7 +54,7 @@
             <form name="form-consult" id="form-consult">
                 <div class="input-text">
                     <label for="">Busca tu pokemon</label>
-                    <input type="text" name="input_name">
+                    <input type="text" name="input_name" required placeholder="Por id o nombre">
                 </div>
                 <div class="input-button">
                     <button type="submit" class="btn btn-search" name="btn-consult">
