configuracion de pokedex

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
             </div>
             <div class="height-23 view-3 hidden">
-                <p>Encendiendo</p>
+                <div class="spinner"></div>
+                <p class="text-load">Encendiendo</p>
             </div>
             <div class="height-23 view-4 hidden">
             </div>
@@ -60,7 +61,7 @@
             <form name="form-consult" id="form-consult">
                 <div class="input-text">
                     <label for="input-name">Busca tu pokemon</label>
-                    <input type="text" class="input-name" id="input-name" disabled autofocus name="input_name" required
+                    <input type="text" class="input-name" id="input-name" disabled autofocus name="input_name"
                         placeholder="Por id o nombre">
                 </div>
                 <div class="input-button">
