--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
                 <p class="text-load">Encendiendo</p>
             </div>
             <div class="height-23 view-4 hidden">
+                <p class="title-alert"
+                    style="text-align: center; padding-top: 2rem; padding-bottom: 0.5rem; font-size: 1.5rem;">Atencion!
+                </p>
+                <p class="text-alert"
+                    style="text-align: center; font-size: 0.9rem; padding-left: 0.5rem; padding-right: 0.5rem;">Lorem
+                    ipsum dolor, sit amet
+                    consectetur adipisicing elit. Inventore, adipisci.</p>
             </div>
             <div class="height-23 view-5 hidden">
             </div>
@@ -50,10 +57,10 @@
             <button class="btn btn-power">
                 <i class="fa-solid fa-power-off"></i>
             </button>
-            <button class="btn btn-controls back">
+            <button class="btn btn-gray back" disabled>
                 <i class="fa-solid fa-backward"></i>
             </button>
-            <button class="btn btn-controls next">
+            <button class="btn btn-gray next" disabled>
                 <i class="fa-solid fa-forward"></i>
             </button>
         </div>
@@ -65,7 +72,7 @@
                         placeholder="Por id o nombre">
                 </div>
                 <div class="input-button">
-                    <button type="submit" class="btn btn-search" name="btn-consult">
+                    <button type="submit" class="btn btn-gray" name="btn-consult" disabled>
                         <i class="fa-solid fa-circle-dot"></i>
                     </button>
                 </div>
